# DecentEspressoPrintTheShot

./: .gitignore  README.md  README_zh  README_zh.md  print_the_shot_server.py
plugin/: plugin.tcl
scripts/: build_linux.sh  build_macos.sh  build_windows.bat  print_the_shot.spec  pyproject.toml  requirements.txt
