[build-system]
requires = [
    "setuptools>=45.0",
    "wheel",
    "pyinstaller>=5.0.0",
    "matplotlib>=3.5.0",
    "pillow>=9.0.0", 
    "numpy>=1.21.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "PrintTheShotServer"
version = "1.1.0"
description = "DECENT咖啡机数据打印服务器 - 多语言支持"
authors = [
    {name = "Sofronio", email = "xbox2xbox@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Graphics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "matplotlib>=3.5.0",
    "pillow>=9.0.0", 
    "numpy>=1.21.0",
]

[project.optional-dependencies]
windows = [
    "pywin32>=306"
]
build = [
    "pyinstaller>=5.0.0"
]

[project.scripts]
print-the-shot-server = "src.print_the_shot_server:main"